Roles addeed and documented
