# src/routes/othersRoutes.ts
@@ -12,6 +12,7 @@ class OthersRoutes {
         this.router.get('/categories', othersControllers.getCategories);
         this.router.get('/sales/:id',othersControllers.getSale);
         this.router.get('/sales/',othersControllers.getSales);
+        this.router.get('/roles/', othersControllers.getRoles);
     }
 }
 
